# grpc_bench

.github/workflows/: build.yml  issue_bench.yml
cpp_grpc_mt_bench/: Dockerfile
cpp_grpc_st_bench/: Dockerfile
haskell_grpc_haskell_bench/: .gitignore  Dockerfile  cabal.project  grpc-haskell-bench.cabal
haskell_grpc_haskell_bench/app/: Main.hs
haskell_grpc_haskell_bench/src/Proto/API/: Helloworld.hs
rust_wtx_bench/: Cargo.toml  rust-toolchain
rust_wtx_bench/src/: main.rs
scala_pekko_bench/: Dockerfile  build.sbt
scala_pekko_bench/project/: plugins.sbt
scala_pekko_bench/src/main/resources/: application.conf
scala_pekko_bench/src/main/scala/com/example/helloworld/: GreeterServer.scala
scala_proteus_ox_bench/: Dockerfile  build.sbt
scala_proteus_ox_bench/src/main/scala/com/example/helloworld/: GreeterImpl.scala  GreeterServer.scala  Helloworld.scala
