cabal-version: 3.0
name:          grpc-haskell-bench
version:       0.1.0.0

common lang
  default-language: Haskell2010
  default-extensions:
      DataKinds
      OverloadedLabels
      OverloadedStrings
      TypeApplications
      TypeFamilies
  ghc-options:
    -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -funbox-strict-fields

library
  import:         lang
  hs-source-dirs: src, generated
  exposed-modules:
      Proto.API.Helloworld
  other-modules:
      Proto.Helloworld
  build-depends:
    , base                >=4.14 && <5
    , grapesy             >=1.1  && <1.2
    , proto-lens          >=0.7  && <0.8
    , proto-lens-runtime  >=0.7  && <0.8

executable haskell-grpc-haskell-bench
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base                >=4.14 && <5
    , grpc-haskell-bench
    , grapesy             >=1.1  && <1.2
    , proto-lens-runtime  >=0.7  && <0.8
